tweaked ugly scrollbar issue

--- a/app/assets/stylesheets/browse/works.css.scss
+++ b/app/assets/stylesheets/browse/works.css.scss
@@ -125,6 +125,7 @@ section.work-cards {
     .project-description {
       max-height      : 250px;
       overflow        : scroll;
+      overflow-x      : hidden;
     }
   }
 
